--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pull:postgres": "dotenv -e .env.local -- npx prisma db pull",
+    "push:postgres": "dotenv -e .env.local -- npx prisma db push",
+    "validate:postgres": "dotenv -e .env.local -- npx prisma validate"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
@@ -23,6 +27,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
