--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "generate:postgres": "dotenv -e .env.local -- npx prisma generate",
     "pull:postgres": "dotenv -e .env.local -- npx prisma db pull",
     "push:postgres": "dotenv -e .env.local -- npx prisma db push",
     "validate:postgres": "dotenv -e .env.local -- npx prisma validate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "deep-email-validator": "^0.1.21",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
